// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  className="box overflowAuto"
>
  <table
    className="table"
  >
    <div>
      rest of table
    </div>
  </table>
</div>
`;

exports[`renders correctly with border 1`] = `
<div
  className="borderColorLightGray box overflowAuto rounding1 sizeSm solid"
>
  <table
    className="table"
  >
    <div>
      rest of table
    </div>
  </table>
</div>
`;
